# actor-framework-c

./: CMakeLists.txt
libcaf_core_c/: CMakeLists.txt  cpp2c.py
